fixed slider bug on firefox

--- a/css/components/_slider.scss
+++ b/css/components/_slider.scss
@@ -69,10 +69,15 @@
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
-    // width: 4rem;
+    width: 4rem;
     height: 2.5rem;
     border: none;
     background: none;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-indent: -9999px;
+    overflow: hidden;
 
     &:hover {
         cursor: pointer;
@@ -83,11 +88,11 @@
     .slick-next,
     .slick-prev {
         &:nth-of-type(1) {
-            content: url("../assets/icons/arrows/ic_arrow-left-pink.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-left-pink.svg");
         }
 
         &:nth-of-type(2) {
-            content: url("../assets/icons/arrows/ic_arrow-right-pink.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-right-pink.svg");
         }
     }
 
@@ -104,11 +109,11 @@
     .slick-next,
     .slick-prev {
         &:nth-of-type(1) {
-            content: url("../assets/icons/arrows/ic_arrow-left-orange.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-left-orange.svg");
         }
 
         &:nth-of-type(2) {
-            content: url("../assets/icons/arrows/ic_arrow-right-orange.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-right-orange.svg");
         }
     }
 
@@ -125,11 +130,11 @@
     .slick-next,
     .slick-prev {
         &:nth-of-type(1) {
-            content: url("../assets/icons/arrows/ic_arrow-left-blue.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-left-blue.svg");
         }
 
         &:nth-of-type(2) {
-            content: url("../assets/icons/arrows/ic_arrow-right-blue.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-right-blue.svg");
         }
     }
 
@@ -146,11 +151,11 @@
     .slick-next,
     .slick-prev {
         &:nth-of-type(1) {
-            content: url("../assets/icons/arrows/ic_arrow-left-green.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-left-green.svg");
         }
 
         &:nth-of-type(2) {
-            content: url("../assets/icons/arrows/ic_arrow-right-green.svg");
+            background-image: url("../assets/icons/arrows/ic_arrow-right-green.svg");
         }
     }
 
